<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:contentDescription="@string/note_1"
        android:background="@drawable/button_red"
        android:text="@string/c"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:contentDescription="@string/note_2"
        android:background="@drawable/button_orange"
        android:text="@string/d"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:layout_marginVertical="4dp"
        android:contentDescription="@string/note_3"
        android:background="@drawable/button_yellow"
        android:text="@string/e"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@drawable/button_green"
        android:contentDescription="@string/note_4"
        android:text="@string/f"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:layout_marginVertical="4dp"
        android:contentDescription="@string/note_5"
        android:background="@drawable/button_teal"
        android:text="@string/g"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:layout_marginVertical="4dp"
        android:contentDescription="@string/note_6"
        android:background="@drawable/button_blue"
        android:text="@string/a"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="1dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/note_7"
        android:background="@drawable/button_purple"
        android:text="@string/b"/>
</LinearLayout>
